fix exhibition arrows, update image view to not show fullscreen on mobile safari or opera, add transparent background behind menu, collapse menu when you click away

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -31,8 +31,30 @@ url('../fonts/GeosansLight.eot');
   outline:none!important; 
 }
 
+.navbar-collapse.collapse.show {
+  background-color: rgba(255,255,255,0.8);
+  margin-left: 75%; 
+}
+
+.navbar-collapse.collapsing {
+  background-color: rgba(255,255,255,0.8);
+  margin-left: 75%; 
+}
+
+@media only screen and (max-width: 800px) {
+  .navbar-collapse.collapse.show {
+    margin-left: 50%; 
+  }
+
+  .navbar-collapse.collapsing {
+    margin-left: 50%;  
+  }
+  
+}   
+
+
 .dropdown-menu {
-  background-color: transparent; 
+  background-color: transparent!important;
   border-color: transparent!important; 
 }
 
